tools/compile_fail_utils/tests/example_tests/import.stderr
error[E0599]: no function or associated item named `this_function_does_not_exist` found for struct `Config` in the current scope
  --> tests/example_tests/import.rs:LL:CC
   |
LL |     let _ = Config::this_function_does_not_exist();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item not found in `Config`
   |
note: if you're trying to build a new `Config` consider using one of the following associated functions:
      Config::dummy
      Config::rustc
      Config::cargo
  --> CARGO_REGISTRY/ui_test-0.29.1/src/config.rs:LL:CC
   |
LL |     pub fn dummy() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^
...
LL |     pub fn rustc(root_dir: impl Into<PathBuf>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     pub fn cargo(root_dir: impl Into<PathBuf>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
